--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <title>Meny Zakar</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-    <link rel="stylesheet" href="/style.css">
-    <link rel="stylesheet" href="/fonts.css">
-    <link rel="shortcut icon" href="images/favicon(1).ico" type="image/x-icon">
+    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./fonts.css">
+    <link rel="shortcut icon" href="./images/favicon(1).ico" type="image/x-icon">
 </head>
 <body>
     <section class="full">
@@ -51,21 +51,21 @@
             
             <div class="d-flex gap-5 justify-content-center pt-5 pb-5">
                 <span class="badge d-flex p-2 align-items-center ">
-                  <img class="logo-custom" src="/images/html-logo.png"  alt="">
+                  <img class="logo-custom" src="./images/html-logo.png"  alt="">
                 </span>
                 <span class="badge d-flex p-2 align-items-center">
-                    <img class="logo-custom" src="/images/css-logo.png"  alt="">
+                    <img class="logo-custom" src="./images/css-logo.png"  alt="">
                   </span>
                   <span class="badge d-flex p-2 align-items-center">
-                    <img class="logo-custom" src="/images/javascript-logo.png" alt="">
+                    <img class="logo-custom" src="./images/javascript-logo.png" alt="">
                   </span>
               </div>
               <div class="d-flex gap-5 justify-content-center pt-5 pb-5">
                 <span class="badge d-flex p-2 align-items-center ">
-                  <img class="logo-custom" src="/images/ifrs logo.png"  alt="">
+                  <img class="logo-custom" src="./images/ifrs logo.png"  alt="">
                 </span>
                 <span class="badge d-flex p-2 align-items-center">
-                    <img class="logo-custom" src="/images/usgaap logo.png"  alt="">
+                    <img class="logo-custom" src="./images/usgaap logo.png"  alt="">
                   </span>
                   
               </div>
