removal of padding top Logos

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                     <img class="logo-custom" src="./images/javascript-logo.png" alt="">
                   </span>
               </div>
-              <div class="d-flex gap-5 justify-content-center pt-5 pb-5">
+              <div class="d-flex gap-5 justify-content-center pb-5">
                 <span class="badge d-flex p-2 align-items-center ">
                   <img class="logo-custom" src="./images/ifrs logo.png"  alt="">
                 </span>
